Assignment 2: Improve CMakeLists.txt

--- a/assignment-2/CMakeLists.txt
+++ b/assignment-2/CMakeLists.txt
@@ -5,15 +5,28 @@ set(CMAKE_BUILD_TYPE Debug)
 
 include_directories(BEFORE ${PROJECT_SOURCE_DIR}/../include /opt/pumasim/include)
 
-# creates a convenient link to pumasim in the build directory
-add_custom_command(
-    TARGET fowardkinematics POST_BUILD
-    COMMAND ln -sf ../pumasim pumasim
+# For compilation of the forwardkinematics library
+add_library(forwardkinematics SHARED
+	forwardkinematics/forwardkinematics.cpp
+	forwardkinematics/forwardkinematics.hpp
 )
 
-# For compilation of  the control loop library:
-add_library(fowardkinematics SHARED
-    forwardkinematics/forwardkinematics.cpp
-    forwardkinematics/forwardkinematics.hpp
+# For compilation of the controlDLL library
+add_library(controlDLL SHARED
+	forwardkinematics/forwardkinematics.cpp
+	forwardkinematics/forwardkinematics.hpp
+	controlDLL/control.cpp
 )
-target_link_libraries (fowardkinematics)
+
+# Add a custom target to create the symbolic link
+add_custom_target(create_pumasim_symlink ALL
+	COMMAND ln -sf ../pumasim pumasim
+	COMMENT "Creating symbolic link to pumasim"
+)
+
+# Make the libraries depend on the custom target
+add_dependencies(forwardkinematics create_pumasim_symlink)
+add_dependencies(controlDLL create_pumasim_symlink)
+
+# Link controlDLL with forwardkinematics
+target_link_libraries(controlDLL forwardkinematics)
